@@ -101,6 +101,10 @@ Test case 6 : verbosity = -vvv
 # Location of files:
 #                       mysqld: XXXXXXXXXXXX
 #                   mysqladmin: XXXXXXXXXXXX
+#      mysql_system_tables.sql: XXXXXXXXXXXX
+# mysql_system_tables_data.sql: XXXXXXXXXXXX
+# mysql_test_data_timezone.sql: XXXXXXXXXXXX
+#         fill_help_tables.sql: XXXXXXXXXXXX
 # Setting up empty database and mysql tables...
 # Starting new instance of the server...
 # Startup command for new server:
@@ -118,6 +122,10 @@ Test case 7 : -vvv and write command to file shortcut
 # Location of files:
 #                       mysqld: XXXXXXXXXXXX
 #                   mysqladmin: XXXXXXXXXXXX
+#      mysql_system_tables.sql: XXXXXXXXXXXX
+# mysql_system_tables_data.sql: XXXXXXXXXXXX
+# mysql_test_data_timezone.sql: XXXXXXXXXXXX
+#         fill_help_tables.sql: XXXXXXXXXXXX
 #     write startup command to: startme.sh
 # Setting up empty database and mysql tables...
 # Starting new instance of the server...
